--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: riclpmr
-Title: What the Package Does (one line, title case)
+Title: Generate lavaan syntax for RI-CLPM
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Authors@R: person("John", "Flournoy", email = "uoflournoy@gmail.com", role = c("aut", "cre"))
+Description: Generate lavaan syntax for RI-CLPM
 Depends: R (>= 3.5.1)
-License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+License: MIT + file LICENSE
