--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: riclpmr
 Title: Generate lavaan syntax for RI-CLPM
 Version: 0.0.0.9000
-Authors@R: person("John", "Flournoy", email = "uoflournoy@gmail.com", role = c("aut", "cre"))
-Description: Generate lavaan syntax for RI-CLPM
+Authors@R: person("John", "Flournoy", email = "john_flournoy@fas.harvard.edu", role = c("aut", "cre"))
+Description: Generate lavaan syntax for a RI-CLPM
 Depends: R (>= 3.4.4)
 Encoding: UTF-8
 LazyData: true
