--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,6 @@ export(latent_resids)
 export(lavriclpm)
 export(manifest_ints)
 export(residual_variances)
+export(riclpm_text)
 export(simple_vars)
 export(varcovars)
