fixed import lavaan

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(contemp_covars)
 export(latent_resids)
 export(lavriclpm)
 export(manifest_ints)
+export(random_intercepts)
 export(residual_variances)
 export(riclpm_text)
 export(simple_vars)
