update with example

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,5 +10,6 @@ export(random_intercepts)
 export(residual_variances)
 export(riclpm_text)
 export(simple_vars)
+export(simriclpm)
 export(varcovars)
 import(lavaan)
